Fixes published_at z-index

--- a/app/assets/stylesheets/georgia/settings/_z-index.scss
+++ b/app/assets/stylesheets/georgia/settings/_z-index.scss
@@ -1,6 +1,6 @@
 $z-header: 100;
-$z-header-main: 1;
-$z-sidebar: 2;
+$z-header-main: 3;
+$z-sidebar: 4;
 
 $z-backdrop: 201;
 $z-modal: 202;
